 - Fix issue where values of indicators (sequence/choice/all) would
   write to the same internal dict. (#425)
 - Set default XML parse mode to strict as was intended (#332)
 - Add support for pickling value objects (#417)
 - Add explicit Nil value via ``zeep.xsd.Nil`` (#424)
 - Add xml_huge_tree kwarg to the Client() to enable lxml's huge_tree mode,
   this is disabled by default (#332)
 

1.4.1 (2017-04-01)
------------------
 - The previous release (1.4.0) contained an incorrect dependency due to 
   bumpversion moving all 1.3.0 versions to 1.4.0. This fixes it.


1.4.0 (2017-04-01)
------------------
 - Hardcode the xml prefix to the xml namespace as defined in the specs (#367)
 - Fix parsing of unbound sequences within xsd choices (#380)
 - Use logger.debug() for debug related logging (#369)
 - Add the ``Client.raw_response`` option to let zeep return the raw 
   transport response (requests.Response) instead of trying to parse it.
 - Handle minOccurs/maxOccurs properlhy for xsd:Group elements. This also 
   fixes a bug in the xsd:Choice handling for multiple elements (#374, #410)
 - Fix raising XMLSyntaxError when loading invalid XML (Antanas Sinica, #396)


1.3.0 (2017-03-14)
------------------
 - Add support for nested xsd:choice elements (#370)
 - Fix unresolved elements for xsd:extension, this was a regression introduced
   in 1.2.0 (#377)


1.2.0 (2017-03-12)
------------------
 - Add flag to disable strict mode in the Client. This allows zeep to better
   work with non standard compliant SOAP Servers. See the documentation for
   usage and potential downsides.
 - Minor refactor of resolving of elements for improved performance
 - Support the SOAP 1.2 'http://www.w3.org/2003/05/soap/bindings/HTTP/' 
   transport uri (#355)
 - Fallback to matching wsdl lookups to matching when the target namespace is
   empty (#356)
 - Improve the handling of xsd:includes, the default namespace of the parent